--- a/vtigercrm6/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/right_panel/content_properties.html
+++ b/vtigercrm6/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/right_panel/content_properties.html
@@ -12,6 +12,7 @@
 
             <!-- Title -->
             <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Properties' | translate }}</h4>
+            <span class="icon-helptext hide" id="properties-helptext">i</span>
         </div>
 
         <!-- Content -->
@@ -98,6 +99,7 @@
 
             <!-- Title -->
             <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Product block' | translate }}</h4>
+            <span class="icon-helptext hide" id="product-helptext">i</span>
         </div>
 
         <!-- Content -->
@@ -177,6 +179,7 @@
 
             <!-- Title -->
             <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Related block' | translate }}</h4>
+            <span class="icon-helptext hide" id="related-helptext">i</span>
         </div>
 
         <!-- Content -->
@@ -255,6 +258,7 @@
 
             <!-- Title -->
             <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Other information' | translate }}</h4>
+            <span class="icon-helptext hide" id="other-information-helptext">i</span>
         </div>
 
         <!-- Content -->
@@ -265,7 +269,7 @@
                 <!--Custom functions-->
                 <div>
                     <div class="doctool-subhead m--bottom-sm">
-                        <span>Custom functions</span>
+                        <span>Custom functions  <span class="icon-helptext hide" id="custom-functions-helptext">i</span></span>
                     </div>
 
                     <div class="m--bottom">
@@ -287,7 +291,7 @@
                 <!--Custom fields-->
                 <div>
                     <div class="doctool-subhead m--bottom-sm">
-                        <span>Custom fields</span>
+                        <span>Custom fields <span class="icon-helptext hide" id="custom-fields-helptext">i</span></span>
                     </div>
 
                     <div class="m--bottom">
