--- a/vtigercrm6/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/right_panel/general_decision.html
+++ b/vtigercrm6/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/right_panel/general_decision.html
@@ -115,6 +115,7 @@
 
             <!-- Title -->
             <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Others' | translate }}</h4>
+            <span class="icon-helptext hide" id="others-helptext">i</span>
         </div>
 
         <!-- Content -->
@@ -126,6 +127,7 @@
                 <div>
                     <div class="doctool-subhead m--bottom-sm">
                         {{ 'Notes' | translate }}
+                        <span class="icon-helptext hide" id="notes-helptext">i</span>
                     </div>
 
                     <div id="quoting_tool-notes-field">
@@ -141,6 +143,7 @@
 
                     <div class="doctool-subhead m--bottom-sm">
                         {{ 'Attachments' | translate }}
+                        <span class="icon-helptext hide" id="attachments-helptext">i</span>
                     </div>
 
                     <div id="quoting_tool-attachments-fields" class="quoting_tool-accept-decline-fields">
@@ -164,6 +167,7 @@
                 <div>
                     <div class="doctool-subhead m--bottom-sm">
                         <span>{{ 'Expire in Days' | translate }}</span>
+                        <span class="icon-helptext hide" id="expire-in-days-helptext">i</span>
                     </div>
 
                     <div class="m--bottom">
@@ -177,6 +181,7 @@
                 <div>
                     <div class="doctool-subhead m--bottom-sm">
                         <span>{{ 'Status' | translate }}</span>
+                        <span class="icon-helptext hide" id="status-helptext">i</span>
                     </div>
 
                     <div class="m--bottom">
@@ -203,6 +208,7 @@
 
             <!-- Title -->
             <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Auth.net Integration' | translate }}</h4>
+            <span class="icon-helptext hide" id="auth-integration-helptext">i</span>
         </div>
 
         <!-- Content -->
