--- a/vtigercrm6/vtigercrm/layouts/vlayout/modules/QuotingTool/resources/js/views/right_panel/content_properties.html
+++ b/vtigercrm6/vtigercrm/layouts/vlayout/modules/QuotingTool/resources/js/views/right_panel/content_properties.html
@@ -11,7 +11,8 @@
             </div>
 
             <!-- Title -->
-            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Properties' | translate }}</h4>
+            <h4 style="display: inline" class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Properties' | translate }}</h4>
+            <span class="icon-helptext hide" id="properties-helptext">i</span>
         </div>
 
         <!-- Content -->
@@ -97,7 +98,8 @@
             </div>
 
             <!-- Title -->
-            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Product block' | translate }}</h4>
+            <h4 style="display: inline" class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Product block' | translate }}</h4>
+            <span class="icon-helptext hide" id="product-helptext">i</span>
         </div>
 
         <!-- Content -->
@@ -176,7 +178,8 @@
             </div>
 
             <!-- Title -->
-            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Related block' | translate }}</h4>
+            <h4 style="display: inline" class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Related block' | translate }}</h4>
+            <span class="icon-helptext hide" id="related-helptext">i</span>
         </div>
 
         <!-- Content -->
@@ -187,7 +190,7 @@
             <div>
                 <div>
                     <div class="doctool-subhead m--bottom-sm">
-                        <span>Product block</span>
+                        <span>Related block</span>
                     </div>
 
                     <div class="m--bottom">
@@ -254,7 +257,8 @@
             </div>
 
             <!-- Title -->
-            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Other information' | translate }}</h4>
+            <h4 style="display: inline" class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Other information' | translate }}</h4>
+            <span class="icon-helptext hide" id="other-information-helptext">i</span>
         </div>
 
         <!-- Content -->
@@ -265,7 +269,7 @@
                 <!--Custom functions-->
                 <div>
                     <div class="doctool-subhead m--bottom-sm">
-                        <span>Custom functions</span>
+                        <span>Custom functions  <span class="icon-helptext hide" id="custom-functions-helptext">i</span></span>
                     </div>
 
                     <div class="m--bottom">
@@ -286,7 +290,7 @@
                 <!--Custom fields-->
                 <div>
                     <div class="doctool-subhead m--bottom-sm">
-                        <span>Custom fields</span>
+                        <span>Custom fields <span class="icon-helptext hide" id="custom-fields-helptext">i</span></span>
                     </div>
 
                     <div class="m--bottom">
@@ -307,7 +311,7 @@
                 <!--Company information-->
                 <div>
                     <div class="doctool-subhead m--bottom-sm">
-                        <span>Company information</span>
+                        <span>Company information <span class="icon-helptext hide" id="company-information-helptext">i</span></span>
                     </div>
 
                     <div class="m--bottom">
