--- a/vtiger7/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/right_panel/accept.html
+++ b/vtiger7/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/right_panel/accept.html
@@ -2,16 +2,15 @@
     <div class="quoting_tool-tool-items-main">
         <ul class="list list--tabs list--justified m--bottom">
             <li ng-class="{'active': section == SECTIONS.DECISION}">
-                <a href="" ng-click="showSection(SECTIONS.DECISION)">{{ 'General' | translate }}</a>
+                <a href="" ng-click="showSection(SECTIONS.DECISION)">{{ 'Accept' | translate }}/{{ 'Decline' | translate }}</a>
             </li>
         </ul>
 
         <div class="quoting_tool-tool-items-container" resize>
-
             <!-- decision sections-->
             <div class="btn-sq-holder m--bottom" style="margin-right: 0;"
                  ng-if="section == SECTIONS.DECISION">
-                <div ng-include="'layouts/v7/modules/QuotingTool/resources/js/views/right_panel/general_decision.html'"
+                <div ng-include="'layouts/v7/modules/QuotingTool/resources/js/views/right_panel/accept_decision.html'"
                      onload="load_decision()"></div>
             </div>
         </div>
