--- a/vtiger7/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/right_panel/content_blocks.html
+++ b/vtiger7/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/right_panel/content_blocks.html
@@ -1,35 +1,32 @@
 
-<h3 class="redsign-blocks">Design Elements </h3>
-
+<h4 style="color: #59b671; text-decoration: underline;padding-left: 21%">{{ 'Design Elements' | translate }}</h4>
 <div class="btn btn--sq-icon block-handle quoting_tool-drag-component-to-content"
-
-     ng-repeat="block in app.data.blocks" ng-if="block.layout.name == 'Heading' || block.layout.name == 'Text' || block.layout.name == 'Cover page' || block.layout.name == 'Image' || block.layout.name == 'Line break' || block.layout.name == 'Line' || block.layout.name == 'Page break' || block.layout.name == 'Page footer' || block.layout.name == 'Page header' || block.layout.name == 'Video' || block.layout.name == 'Table' || block.layout.name == 'Toc'"
-           ng-click="addBlock(block)" data-id="{{block.layout.id}}" on-finish-render-item="ngRepeatBlockFinished">
-    <span class="btn--sq-icon__bd" title="{{ block.layout.name | translate}}">
-        <i class="icon icon--xbig icon--clear-background-image {{block.layout.icon}}"></i>
-        <!--<span ng-if="block.layout.icon_supplement" class="icon-supplement">{{ block.layout.icon_supplement }}</span>-->
-
-        <span class="btn--sq-icon__text">{{ block.layout.name | translate}}</span>
-    </span>
-
-</div>
-<h3 class="redsign-blocks">Data Elements </h3>
-<div class="btn btn--sq-icon block-handle quoting_tool-drag-component-to-content"
-
-     ng-repeat="block in app.data.blocks" ng-if="block.layout.name == 'Table(1 col)' ||  block.layout.name == 'Table(2 cols)' ||  block.layout.name == 'Related module' ||  block.layout.name == 'Pricing table (IDC)' ||  block.layout.name == 'Pricing table'"
+     ng-repeat="block in app.data.blocks" ng-if="block.layout.id != 'init' && block.layout.is_design_elements == true"
      ng-click="addBlock(block)" data-id="{{block.layout.id}}" on-finish-render-item="ngRepeatBlockFinished">
     <span class="btn--sq-icon__bd" title="{{ block.layout.name | translate}}">
         <i class="icon icon--xbig icon--clear-background-image {{block.layout.icon}}"></i>
-
-        <span ng-if="block.layout.icon_supplement" class="icon-supplement ">{{ block.layout.icon_supplement }}</span>
-        <div><span ng-if="block.layout.icon_helptext" ng-click="showIconHelpText(block.layout.id);$event.stopPropagation()" class="icon-helptext hide">{{ block.layout.icon_helptext }}</span></div>
-
-
-        <span ng-if="block.layout.name == 'Related module'" class="btn--sq-icon__text break-line" id="breakline-related">{{ block.layout.name | translate}}</span>
-        <span ng-if="block.layout.name == 'Pricing table'" class="btn--sq-icon__text break-line" id="breakline-pricing">{{ block.layout.name | translate}}</span>
-        <span ng-if="block.layout.name == 'Pricing table (IDC)'" class="btn--sq-icon__text break-line" id="breakline-pricing-idc">{{ block.layout.name | translate}}</span>
-        <span ng-if="block.layout.name == 'Table(1 col)' || block.layout.name == 'Table(2 cols)'" class="btn--sq-icon__text">{{ block.layout.name | translate}}</span>
-
+        <span ng-if="block.layout.icon_supplement" class="icon-supplement">{{ block.layout.icon_supplement }}</span>
+        <span class="btn--sq-icon__text">{{ block.layout.name | translate}}</span>
     </span>
-
+</div>
+<h4 style="color: #59b671; text-decoration: underline;padding-left: 21%">{{ 'Data Elements' | translate }}</h4>
+<div class="btn btn--sq-icon block-handle quoting_tool-drag-component-to-content block-custom"
+     ng-repeat="block in app.data.blocks" ng-if="block.layout.id != 'init' && block.layout.is_data_elements == true"
+     ng-click="addBlock(block)" data-id="{{block.layout.id}}" on-finish-render-item="ngRepeatBlockFinished">
+    {{block.layout.is_design_elements}}
+    <span class="btn--sq-icon__bd" title="{{ block.layout.name | translate}}">
+        <i class="icon icon--xbig icon--clear-background-image {{block.layout.icon}}"></i>
+        <span ng-if="block.layout.icon_supplement" class="icon-supplement">{{ block.layout.icon_supplement }}</span>
+        <div><span ng-if="block.layout.icon_helptext" ng-click="showIconHelpText(block.layout.id);$event.stopPropagation()" class="icon-helptext hide">{{ block.layout.icon_helptext }}</span></div>
+        <span class="btn--sq-icon__text">{{ block.layout.name | translate}}</span>
+    </span>
+</div>
+<!--move vtiger_field from Widget to Block-->
+<div class="widget-handle btn btn--sq-icon quoting_tool-drag-widget-component-to-content"
+     ng-repeat="widget in app.data.widgets" ng-if="widget.layout.id != 'init' && widget.layout.id =='text_field'"
+     ng-click="addWidget(widget)" data-id="{{widget.layout.id}}" on-finish-render-item="ngRepeatWidgetFinished">
+    <span class="btn--sq-icon__bd" title="{{ widget.layout.name | translate }}">
+            <i class="icon icon--big icon--clear-background-image {{widget.layout.icon}}"></i>
+        <span class="btn--sq-icon__text">{{ widget.layout.name | translate }}</span>
+    </span>
 </div>
