--- a/vtigercrm6/vtigercrm/layouts/vlayout/modules/QuotingTool/resources/js/views/right_panel/tools.html
+++ b/vtigercrm6/vtigercrm/layouts/vlayout/modules/QuotingTool/resources/js/views/right_panel/tools.html
@@ -25,6 +25,18 @@
         </a>
     </li>
     <li class="btn--navpanel" ui-sref-active="is--active">
+        <a ui-sref="base.accept">
+            <i class="icon icon--clear-background-image icon--sign"></i>
+            <span>{{ 'Accept' | translate }}</span>
+        </a>
+    </li>
+    <li class="btn--navpanel" ui-sref-active="is--active">
+        <a ui-sref="base.background">
+            <i class="icon icon--clear-background-image icon--block-image"></i>
+            <span style="font-size: 12px">{{ 'Background' | translate }}</span>
+        </a>
+    </li>
+    <li class="btn--navpanel" ui-sref-active="is--active">
         <a ui-sref="base.history">
             <i class="icon icon--clear-background-image fa fa-history force-fa"></i>
             <span>{{ 'History' | translate }}</span>
